--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
     align-items: center;
     color: #e5e5e5;
     font-size: 14px;
-    position: fixe;
+    position: fixed;
     background-image: linear-gradient(180deg, rgba(0,0,0,0.7) 10%, transparent);
     z-index: 1;
 }
