--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -69,3 +69,55 @@
 .more-cards{
     padding-left: 6%;
 }
+
+
+/* responsive  */
+@media (max-width: 1026px){
+    .hero-caption .title-cards{
+        display: none;
+    }
+    .hero-btns{
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 800px) {
+    .hero-caption{
+        padding-left: 4%;
+    }
+    .caption-img{
+    margin-bottom: 10px;
+    width: 40%;
+    }
+    .hero-caption p{
+        max-width: 450px;
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    .hero-btns .btn img{
+        width:18px;
+    }
+    .more-cards{
+        padding-left: 4%;
+    }
+    }
+
+    @media (max-width: 500px){
+        .caption-img{
+            display: none;
+        }
+        
+    .hero-caption p{
+        max-width: 350px;
+        font-size: 12px;
+        margin-bottom: 20px;
+    }
+        .hero-btns .btn img{
+            width: 15px;
+        }
+        .hero-btns .btn{
+            padding: 4px 10px;
+            gap: 5px;
+            font-size: 10px;
+        }
+    }
